--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,6 @@
 .container {
-  max-width: 1200px;
-  padding: 32px;
-}
-
-.title {
-  font-size: 36px;
-  margin-bottom: 24px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
